<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/zipEnter"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/newZipButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainGreetingText" />

    <Button
        android:id="@+id/newZipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/button_zip_update"
        app:layout_constraintBaseline_toBaselineOf="@+id/zipEnter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zipEnter" />

    <TextView
        android:id="@+id/mainGreetingText"
        android:layout_width="237dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/main_hello_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/currentWeatherIcon"
        android:layout_width="122dp"
        android:layout_height="124dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipEnter"
        app:srcCompat="@drawable/levels" />

    <TextView
        android:id="@+id/currentWeatherText"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:gravity="left"
        android:text="TextView"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/currentWeatherIcon"
        app:layout_constraintTop_toTopOf="@+id/thermometerIcon" />

    <ImageView
        android:id="@+id/thermometerIcon"
        android:layout_width="27dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toTopOf="@+id/currentWeatherIcon"
        app:layout_constraintStart_toStartOf="@+id/currentWeatherIcon"
        app:srcCompat="@drawable/icons8_thermometer_64" />

    <TextView
        android:id="@+id/currentTempText"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:gravity="center_vertical|right"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/currentWeatherIcon"
        app:layout_constraintStart_toEndOf="@+id/thermometerIcon" />

    <TextView
        android:id="@+id/currentLocationName"
        android:layout_width="193dp"
        android:layout_height="41dp"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/currentWeatherIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/jsonTestView"
        android:layout_width="321dp"
        android:layout_height="263dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longLabel"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/sunriseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/sunrise_label"
        app:layout_constraintStart_toEndOf="@+id/currentWeatherIcon"
        app:layout_constraintTop_toTopOf="@+id/currentWeatherIcon" />

    <TextView
        android:id="@+id/sunsetValue"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/sunriseValue"
        app:layout_constraintTop_toTopOf="@+id/sunsetLabel" />

    <TextView
        android:id="@+id/humidityValue"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/sunsetValue"
        app:layout_constraintTop_toTopOf="@+id/humidityLabel" />

    <TextView
        android:id="@+id/sunsetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sunset_label"
        app:layout_constraintStart_toStartOf="@+id/sunriseLabel"
        app:layout_constraintTop_toBottomOf="@+id/sunriseLabel" />

    <TextView
        android:id="@+id/humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/humidity_label"
        app:layout_constraintStart_toStartOf="@+id/sunsetLabel"
        app:layout_constraintTop_toBottomOf="@+id/sunsetLabel" />

    <TextView
        android:id="@+id/sunriseValue"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/sunriseLabel"
        app:layout_constraintTop_toTopOf="@+id/sunriseLabel" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_button"
        app:layout_constraintStart_toStartOf="@+id/newZipButton"
        app:layout_constraintTop_toBottomOf="@+id/newZipButton" />

    <TextView
        android:id="@+id/currentWeatherDesc"
        android:layout_width="135dp"
        android:layout_height="21dp"
        android:text="TextView"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="@+id/currentWeatherText"
        app:layout_constraintTop_toBottomOf="@+id/currentWeatherText" />

    <TextView
        android:id="@+id/longLabel"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/longitude_label"
        app:layout_constraintStart_toStartOf="@+id/currentWeatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/currentWeatherIcon" />

    <TextView
        android:id="@+id/longValue"
        android:layout_width="115dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/longLabel"
        app:layout_constraintTop_toTopOf="@+id/longLabel" />

    <TextView
        android:id="@+id/latLabel"
        android:layout_width="79dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/latitude_label"
        app:layout_constraintStart_toStartOf="@+id/longLabel"
        app:layout_constraintTop_toBottomOf="@+id/longLabel" />

    <TextView
        android:id="@+id/latValue"
        android:layout_width="115dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/latLabel"
        app:layout_constraintTop_toTopOf="@+id/latLabel" />

    <TextView
        android:id="@+id/windSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wind_speed_label"
        app:layout_constraintStart_toStartOf="@+id/humidityLabel"
        app:layout_constraintTop_toBottomOf="@+id/humidityLabel" />

    <TextView
        android:id="@+id/windSpeedValue"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/humidityValue"
        app:layout_constraintTop_toTopOf="@+id/windSpeedLabel" />

    <TextView
        android:id="@+id/tempUnitsLabel"
        android:layout_width="39dp"
        android:layout_height="27dp"
        android:gravity="center_vertical|left"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/currentTempText"
        app:layout_constraintTop_toTopOf="@+id/currentTempText" />

</androidx.constraintlayout.widget.ConstraintLayout>